# meridian

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
docs/: architecture.md  concept-coverage-quality-brief.md  concept-layer-optimization-brief.md  concept-layer-quality-audit.md  concept-layer-schema.md  continuous-system-bottleneck-map.md  continuous-system-optimization-brief.md  continuous-system-optimization-rounds.md  daily-use-walkthrough.md  domain-general-paper-wiki-calibration-brief.md  expanded-library-retrieval-calibration-brief.md  final-llm-wiki-product-quality-brief.md  final-llm-wiki-product-spec.md  full-system-architecture.html  full-system-architecture.md  high-leverage-entry-validation-brief.md  high-leverage-knowledge-consolidation-brief.md  high-leverage-synthesis-evolution-brief.md  high-leverage-system-optimization-brief.md  knowledge-layer-optimization-brief.md  knowledge-layer-quality-audit.md  knowledge-layer-schema.md  lab-system-optimization.md  main-wiki-productization-quality-brief.md  mcp-client-integration-brief.md  mvp-paper-wiki-plan.md  mvp-paper-wiki-workflow.md  mvp-workflow.html  paper-wiki-evaluation-plan-v1.md  paper-wiki-mvp-delivery-boundaries.md  paper-wiki-product-maturity-brief.md  paper-wiki-prototype-evaluation-plan.md  paper-wiki-release-readiness-checklist.md  paper-wiki-residual-quality-optimization-brief.md  plugin-distribution.md  real-library-retrieval-audit-brief.md  release-packaging.md  research-coding-framework.html  research-coding-framework.md  research-dev-mvp-plan.md  (+27 more)
tests/: test_cli.py  test_codex_lab_graph_eval.py  test_lab_graph.py  test_vscode_release_workflow.py
wiki/: Claim Evidence Index.md  Concept Index.md  Map of Content.md  Method Index.md  Paper Index.md  Synthesis Index.md  Topic Index.md  index.md  log.md
(+5191 files in other folders)
