[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meridian"
version = "0.1.0"
description = "Paper Wiki prototype CLI for one-paper ingest review packets."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PyMuPDF>=1.24",
]

[project.scripts]
meridian = "meridian.cli:main"
meridian-mcp = "meridian.mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
