[metadata]
name = meridian
version = 0.1.2
description = Markdown-first LLM-maintained paper wiki with CLI and MCP entries.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    PyMuPDF>=1.24
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
meridian =
    templates/wiki-vault/**/*.md
    templates/wiki-vault/**/*.gitkeep
    templates/wiki-vault/**/*.jsonl
    templates/research-dev/**/*.md

[options.entry_points]
console_scripts =
    meridian = meridian.cli:main
    meridian-mcp = meridian.mcp.server:main
